@@ -1,0 +1,4 @@
+select - null from src limit 1;
+select - cast(null as int) from src limit 1;
+select - cast(null as double) from src limit 1;
+select - cast(null as float) from src limit 1;
